syntax = "proto3";


option csharp_namespace = "GrpcServer.Web.Protos";
//option go_package = "pb";
import "Enums.proto";
//import "goole/protobuf/timestamp.proto";

message Employee {
    int32 id = 1;
    int32 no = 2;
    string firstName = 3;
    string lastName = 4;

    MonthSalary monthSalay = 6;
    EmployeeStatus status = 7;
    //google.protobuf.Timestamp lastModfied =8;

    // 保留tag
    reserved 5;


}


message MonthSalary{
    float basic = 1;
    float bonus = 2;
}


message GetByNoRequest{
    int32 no = 1;
}

message EmployeeResponse{
    Employee employee = 1;
}

message GetAllRequest{}


message AddPhotoRequest{
    bytes data = 1;
}

message AddPhotoResponse{
    bool isOk =1 ;
}

message EmployeeRequest{
    Employee employee = 1;
}

// 定义方法
service EmployeeService{
    rpc GetByNo(GetByNoRequest) returns (EmployeeResponse);
    rpc GetAll(GetAllRequest) returns (EmployeeResponse);
    rpc AddPhoto(stream AddPhotoRequest) returns (AddPhotoResponse);
    rpc Save(EmployeeRequest) returns (EmployeeResponse);
    rpc SaveAll(stream EmployeeRequest) returns (stream EmployeeResponse);
}